freemed project changelog
($Id$)

* Fir Mar 23 2001 fforest
  - fixedform_EN.data update with new requirements for
    commercial and Medicare NSF record layouts
  - lib/render_forms add new function render_fixedRecord. This allows
    a single NSF record to be generate by record type so we don;t have to 
    generate an entire form. major performance boost for NSF generation
  - modules/mcsi_nsf_ci major updates. All commercial claim submissions now work.
  - modules/mcsi_nsf_mc major updates. Should be correct but still untested.

* Thu Mar 22 2001 rufustfirefly
  - frmlry.php3 -> old/frmlry.php3
  - lib/API.php: old help.php3 references moved to help.php
  - help.php: removed old lib/API.php redundant reference
  - lib/API.php: cleanups in freemed_display_box_top(), and checking in
    freemed_display_html_bottom() to see if the box has been closed
  - payment_record.php: trigger_error() handling for DIE("") breaks
  - admin.php: removed API.php include
  - modules/generate_forms.module.php: credit to Fred and trigger_error()
    implemented

* Wed Mar 21 2001 rufustfirefly
  - module_information.php: now fixed table width so things wrap properly
  - patient.php: semantic break in patient.php fixed
  - TODO: updated todo
  - index.php: took out lib/API.php include (is included from lib/freemed.php)

* Fri Mar 16 2001 fforest
   - fixedform.EN.data updated with latest NSF format for commercial
     insurance.
   - lib/containers removed unused field from coverage class.
   - lib/render replaced our loop for data padding with PHP str_pad
     function in hopes of cutting down CPU utilization. 
   - mcsi_ncf_ci updated to handle secondary payer records.
   - procedure module. added procrefdoc to add_page global list.

* Thu Mar 15 2001 rufustfirefly
  - updated Fred's modules to have his name on them. still need
    $MODULE_DESCRIPTION, though ...
  - slight alternate_colors optimizations in modules
  - added lib/error_handler.php with hooks in freemed.php